--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  get: ^4.6.5
   http: ^0.13.3
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
