--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   get: ^4.6.5
   http: ^0.13.3
+  sqflite: ^2.2.0+3
+  path_provider: ^2.0.11
   flutter:
     sdk: flutter
 
