--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ environment:
 dependencies:
   get: ^4.6.5
   http: ^0.13.3
+  dio: ^4.0.4
   sqflite: ^2.2.0+3
+  image_picker: ^1.0.2
   path_provider: ^2.0.11
   lottie: ^1.2.1
   flutter:
     sdk: flutter
-
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -65,9 +66,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
+#     - images/a_dot_burr.jpeg
+#     - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
