--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   lottie: ^1.2.1
   flutter:
     sdk: flutter
+  firebase_auth: ^4.8.0
+  firebase_messaging: ^14.1.0
+  firebase_core: ^2.2.0
+  cloud_firestore: ^4.0.5
 
 
 
